[FIX] Updates to dropdowns, popover menus, text fields - text fields   - style placeholder text - dropdowns/popovers   - style placeholder text   - wrap items in a div for scrolling   - give dropdown items titles (for tooltips)   - shrink min width of popovers a little

--- a/blocks-styles/dropdowns.styl
+++ b/blocks-styles/dropdowns.styl
@@ -15,10 +15,6 @@
   position: relative;
   height: 40px;
   border-radius: $base-border-radius;
-  font-size: 14px;
-  font-weight: $normal-weight;
-  line-height: 18px;
-  text-align: left;
   padding: 0 48px 0 16px;
   margin: 0;
   cursor: pointer;
@@ -28,7 +24,7 @@
 
   background-color: $ui-00;
   border: 1px solid $ui-03;
-  color: $text-01;
+  blxUIPlaceholder();
 
   &::after {
     position: absolute;
@@ -98,10 +94,18 @@
   }
 }
 
-.blx-dropdown-text {
+.blx-dropdown-text, .blx-dropdown-placeholder {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.blx-dropdown-text {
+  color: $text-01;
+}
+
+.blx-dropdown-placeholder {
+  color: $ui-07;
 }
 
 .blx-dropdown-menu {
@@ -119,13 +123,18 @@
   box-shadow: 0 3px 6px 0 $interactive-shadow;
 }
 
+.blx-dropdown-list {
+  max-height: 200px;
+  overflow-y: auto;
+}
+
 .blx-dropdown-item {
   background: transparent;
   
   a, button {
-    display: flex;
+    display: block;
     width: 100%;
-    height: 100%;
+    height: 40px;
     padding: 8px 16px;
     cursor: pointer;
     background: transparent;
